[project]
name = "reddit-mcp"
version = "1.0.0"
description = "A Model Context Protocol server for browsing Reddit directly from Claude Desktop"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "hereisswapnil" }
]
keywords = ["reddit", "mcp", "claude", "ai", "api"]

dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.24.0",
    "requests>=2.32.5",
]

[project.urls]
Repository = "https://github.com/hereisswapnil/reddit-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
